; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_exec.c_execargs_purgeable_allocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_exec.c_execargs_purgeable_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bsd_pageable_map = common dso_local global i32 0, align 4
@BSD_PAGEABLE_SIZE_PER_EXEC = common dso_local global i32 0, align 4
@VM_FLAGS_ANYWHERE = common dso_local global i32 0, align 4
@VM_FLAGS_PURGABLE = common dso_local global i32 0, align 4
@VM_KERN_MEMORY_NONE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8**)* @execargs_purgeable_allocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @execargs_purgeable_allocate(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i64, align 8
  store i8** %0, i8*** %2, align 8
  %4 = load i32, i32* @bsd_pageable_map, align 4
  %5 = load i8**, i8*** %2, align 8
  %6 = bitcast i8** %5 to i32*
  %7 = load i32, i32* @BSD_PAGEABLE_SIZE_PER_EXEC, align 4
  %8 = load i32, i32* @VM_FLAGS_ANYWHERE, align 4
  %9 = load i32, i32* @VM_FLAGS_PURGABLE, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @VM_KERN_MEMORY_NONE, align 4
  %12 = call i64 @vm_allocate_kernel(i32 %4, i32* %6, i32 %7, i32 %10, i32 %11)
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @KERN_SUCCESS, align 8
  %15 = icmp eq i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i64 @vm_allocate_kernel(i32, i32*, i32, i32, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
